api: fix device URLs
